# labs-tools-heritage

./: .eslintrc.json  .gitignore  .gitreview  .jsonschema_cmd.sh  .python-version  .yamllint  .yamllint_cmd.sh  Gruntfile.js  LICENSE  Pipfile  README.md  composer.json  docker-compose-base.yml  docker-compose-bot.yml  docker-compose-dump.yml  docker-compose-sshdir.yml  docker-compose.yml  jobs.yml.template  package.json  phpcs.xml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  toolinfo.json  tox.ini
api/: api.php  autoloader.php  common.php  index.php  search.php  searchPage.php
backend/: process_monument_article.php
common/: Skin.18n.php  lib.php  skin.php  status.php
conf/: Dockerfile.bot  Dockerfile.db  Dockerfile.dbdump  Dockerfile.dbempty  Dockerfile.proxy  Dockerfile.web  database.inc.dev  database_config.dev.yml  docker-entrypoint-proxy.sh  entrypoint.sh  wait-for-db.sh
erfgoedbot/: add_coord_to_articles.py  add_object_location_monuments.py  categorize_images.py  check_emailable_users.py  checkers.py  common.py  converters.py  database_config.default.yml  database_connection.py  database_statistics.py  fill_table_monuments_all.py  flickrripper_ee.py  flickrripper_ee_etwiki.py  flickrripper_es.py  flickrripper_list.py  flickrripper_strainu.py  images_of_monuments_without_id.py  missing_commonscat_links.py  monument_tables.py  monuments_config.py  populate_adm_tree.php  populate_image_table.py  statistics_table.py  top_streets.py  unused_monument_images.py  update_database.py  update_id_dump.py
html/: index.html  (+1 more)
(+450 files in other folders)
