[project]
name = "erfgoedbot"
version = "0.0.1"
requires-python = "~=3.9"
dependencies = [
    "future",
    "pywikibot",
    "requests",
    "PyMySQL",
    "PyYAML<6.0",
    "mwparserfromhell",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "freezegun",
]

[tool.uv]
package = false
