[project]
name = "erfgoedbot"
version = "0.0.1"
requires-python = "~=3.11.0"
dependencies = [
    "future",
    "pywikibot",
    "requests",
    "PyMySQL",
    "PyYAML",
    "mwparserfromhell",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-socket",
    "coverage",
    "freezegun",
]

[tool.uv]
package = false
